--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-Django==1.7.4
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-Werkzeug==0.9.6
-bottle==0.12.8
+boto==2.36.0
+bottle-session==0.3
 decorator==3.4.0
-dj-database-url==0.3.0
-gunicorn==19.2.1
-httplib2==0.9
-itsdangerous==0.24
-matplotlib==1.4.2
+Django==1.7.4
+django-dajaxice==0.7
+django-social-auth==0.7.28
+httplib2==0.8
+matplotlib==1.4.0
+mlpy==3.5.0
+mrjob==0.4.2
 networkx==1.9.1
-numpy==1.9.1
-psycopg2==2.6
+numpy==1.8.1
+oauth2==1.5.211
+psycopg2==2.5.4
 pyparsing==2.0.3
-python-dateutil==2.3
-python-instagram==1.1.3
-pytz==2014.10
+python-dateutil==2.2
+python-graph-core==1.8.2
+python-instagram==1.3.0
+python-openid==2.2.5
+PyYAML==3.11
 redis==2.10.3
-simplejson==3.6.5
-six==1.9.0
-south==1.0.2
-virtualenv==12.0.7
+scikit-image==0.10.1
+simplejson==3.6.4
+six==1.8.0
