--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dj-static==0.0.6
 django-csvimport==2.4
 django-dajaxice==0.7
 django-debug-toolbar==1.2.2
+django-endless-pagination==2.0
 django-social-auth==0.7.28
 django-toolbelt==0.0.1
 gunicorn==19.2.1
